commit before sd card changes

--- a/CAN_Network_Captain/CAN_Network_Captain.ioc
+++ b/CAN_Network_Captain/CAN_Network_Captain.ioc
@@ -9,6 +9,9 @@ CAN.Mode=CAN_MODE_NORMAL
 CAN.NART=DISABLE
 CAN.Prescaler=8
 CAN.SJW=CAN_SJW_2TQ
+FATFS.IPParameters=_MAX_SS,_USE_LFN
+FATFS._MAX_SS=4096
+FATFS._USE_LFN=3
 FREERTOS.FootprintOK=false
 FREERTOS.INCLUDE_vTaskDelayUntil=1
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil,FootprintOK,Mutexes01,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
