--- a/CAN_Network_Captain/CAN_Network_Captain.ioc
+++ b/CAN_Network_Captain/CAN_Network_Captain.ioc
@@ -1,25 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
 CAN.BS1=CAN_BS1_2TQ
 CAN.BS2=CAN_BS2_3TQ
-CAN.CalculateBaudRate=500000
-CAN.CalculateTimeBit=2000
-CAN.CalculateTimeQuantum=333.3333333333333
+CAN.CalculateBaudRate=749999
+CAN.CalculateTimeBit=1333
+CAN.CalculateTimeQuantum=222.22222222222223
 CAN.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,Prescaler,BS1,BS2,SJW,NART,Mode
 CAN.Mode=CAN_MODE_NORMAL
 CAN.NART=DISABLE
 CAN.Prescaler=8
 CAN.SJW=CAN_SJW_2TQ
-FATFS.IPParameters=_MAX_SS,_USE_LFN
+FATFS.IPParameters=_MAX_SS
 FATFS._MAX_SS=4096
-FATFS._USE_LFN=3
-FREERTOS.FootprintOK=false
+FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil,FootprintOK,Mutexes01,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil,FootprintOK,Mutexes01,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION
+FREERTOS.MEMORY_ALLOCATION=0
 FREERTOS.Mutexes01=canTelemetryMutex,Dynamic,NULL
 FREERTOS.Queues01=TelemetryQueue,16,uint16_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;SDCardSaveTask,2,128,StartSDCardSaveTask,Default,NULL,Dynamic,NULL,NULL;GetData1,-1,128,StartGetData1,Default,NULL,Dynamic,NULL,NULL;GetData2,-1,128,StartGetData2,Default,NULL,Dynamic,NULL,NULL;ReadCAN,0,128,StartReadCAN,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configMINIMAL_STACK_SIZE=64
-FREERTOS.configTOTAL_HEAP_SIZE=0xf00
+FREERTOS.configMINIMAL_STACK_SIZE=128
+FREERTOS.configTOTAL_HEAP_SIZE=8192
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -41,7 +41,7 @@ Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
 Mcu.Pin10=VP_FATFS_VS_Generic
 Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_SYS_VS_tim1
+Mcu.Pin12=VP_SYS_VS_tim6
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
@@ -49,7 +49,7 @@ Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PA11
 Mcu.Pin8=PA12
-Mcu.Pin9=PB3
+Mcu.Pin9=PB6
 Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -61,7 +61,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:fals
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -69,9 +69,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM1_UP_TIM16_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
@@ -81,16 +81,17 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=LED
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Mode=Full_Duplex_Master
+PA5.Signal=SPI1_SCK
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PB3.Mode=Full_Duplex_Master
-PB3.Signal=SPI1_SCK
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=SP1_CS
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -126,58 +127,60 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_SPI1_Init-SPI1-false-HAL-true
-RCC.ADC12outputFreq_Value=48000000
-RCC.ADC34outputFreq_Value=48000000
-RCC.AHBFreq_Value=48000000
+RCC.ADC12outputFreq_Value=72000000
+RCC.ADC34outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2Freq_Value=48000000
-RCC.APB2TimFreq_Value=48000000
-RCC.CortexFreq_Value=48000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
 RCC.DATA_CACHE_ENABLE=1
-RCC.FCLKCortexFreq_Value=48000000
+RCC.EnbaleCSS=true
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=72000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
 RCC.I2C3Freq_Value=8000000
-RCC.I2SClocksFreq_Value=48000000
+RCC.I2SClocksFreq_Value=72000000
 RCC.INSTRUCTION_CACHE_ENABLE=1
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DATA_CACHE_ENABLE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,INSTRUCTION_CACHE_ENABLE,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,RCC_TIM_PRescaler_Selection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,DATA_CACHE_ENABLE,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SClocksFreq_Value,INSTRUCTION_CACHE_ENABLE,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,RCC_TIM_PRescaler_Selection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
-RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
-RCC.PLLMCOFreq_Value=48000000
-RCC.PLLMUL=RCC_PLL_MUL6
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=72000000
+RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE2
 RCC.RCC_TIM_PRescaler_Selection=RCC_TIMPRES_DESACTIVATED
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM15Freq_Value=48000000
-RCC.TIM16Freq_Value=48000000
-RCC.TIM17Freq_Value=48000000
-RCC.TIM1Freq_Value=48000000
-RCC.TIM2Freq_Value=48000000
-RCC.TIM3Freq_Value=48000000
-RCC.TIM8Freq_Value=48000000
-RCC.UART4Freq_Value=24000000
-RCC.UART5Freq_Value=24000000
-RCC.USART1Freq_Value=48000000
-RCC.USART2Freq_Value=24000000
-RCC.USART3Freq_Value=24000000
-RCC.USBFreq_Value=48000000
+RCC.TIM15Freq_Value=72000000
+RCC.TIM16Freq_Value=72000000
+RCC.TIM17Freq_Value=72000000
+RCC.TIM1Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.TIM3Freq_Value=72000000
+RCC.TIM8Freq_Value=72000000
+RCC.UART4Freq_Value=36000000
+RCC.UART5Freq_Value=36000000
+RCC.USART1Freq_Value=72000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
+RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=6.0 MBits/s
+SPI1.CalculateBaudRate=9.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -186,7 +189,7 @@ VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
 isbadioc=false
