complete accelerometer and sd_card integration

--- a/CAN_Network_Captain/CAN_Network_Captain.ioc
+++ b/CAN_Network_Captain/CAN_Network_Captain.ioc
@@ -16,44 +16,50 @@ FATFS.IPParameters=_MAX_SS
 FATFS._MAX_SS=4096
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil,FootprintOK,Mutexes01,Queues01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,INCLUDE_vTaskDelayUntil,FootprintOK,Mutexes01,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE,MEMORY_ALLOCATION,configCHECK_FOR_STACK_OVERFLOW
 FREERTOS.MEMORY_ALLOCATION=0
 FREERTOS.Mutexes01=canTelemetryMutex,Dynamic,NULL
-FREERTOS.Queues01=TelemetryQueue,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;SDCardSaveTask,2,128,StartSDCardSaveTask,Default,NULL,Dynamic,NULL,NULL;GetData1,-1,128,StartGetData1,Default,NULL,Dynamic,NULL,NULL;GetData2,-1,128,StartGetData2,Default,NULL,Dynamic,NULL,NULL;ReadCAN,0,128,StartReadCAN,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;SDCardSaveTask,2,256,StartSDCardSaveTask,Default,NULL,Dynamic,NULL,NULL;GetData1,-1,256,StartGetData1,Default,NULL,Dynamic,NULL,NULL;GetData2,-1,128,StartGetData2,Default,NULL,Dynamic,NULL,NULL;ReadCAN,0,128,StartReadCAN,Default,NULL,Dynamic,NULL,NULL;GetAccelTask,-1,256,StartGetAccelTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
 FREERTOS.configMINIMAL_STACK_SIZE=128
 FREERTOS.configTOTAL_HEAP_SIZE=8192
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C3.I2C_Speed_Mode=I2C_Fast
+I2C3.IPParameters=I2C_Speed_Mode,Timing
+I2C3.Timing=0x0000020B
 KeepUserPlacement=false
 Mcu.CPN=STM32F303RET6
 Mcu.Family=STM32F3
 Mcu.IP0=CAN
 Mcu.IP1=FATFS
 Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F303R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PF1-OSC_OUT
-Mcu.Pin10=VP_FATFS_VS_Generic
-Mcu.Pin11=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin12=VP_SYS_VS_tim6
+Mcu.Pin10=PA12
+Mcu.Pin11=PB6
+Mcu.Pin12=VP_FATFS_VS_Generic
+Mcu.Pin13=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin14=VP_SYS_VS_tim6
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA5
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
-Mcu.Pin7=PA11
-Mcu.Pin8=PA12
-Mcu.Pin9=PB6
-Mcu.PinsNb=13
+Mcu.Pin7=PC9
+Mcu.Pin8=PA8
+Mcu.Pin9=PA11
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -91,10 +97,14 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.Mode=I2C
+PA8.Signal=I2C3_SCL
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=SP1_CS
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC9.Mode=I2C
+PC9.Signal=I2C3_SDA
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Oscillator
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -129,7 +139,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CAN_Init-CAN-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
 RCC.AHBFreq_Value=72000000
